Fix CSS to make the gallery have a scrollbar and not overflow

--- a/css/main.css
+++ b/css/main.css
@@ -132,10 +132,32 @@ body {
     flex-wrap: wrap;
     gap: 10px;
 
-    min-height: 55vh;
+    min-height: 50vh;
+    height: 100%;
+    max-height: calc(100vh - 10.5vh - 18.5vh - 18.5vh);
+    overflow-y: auto;
+    overflow-x: hidden;
 
     margin-inline: 10px;
     margin-block: 10px;
+
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 3px rgb(128 128 128 / 0.3);
+    background-color: var(--secondary-header-color);
+    border-radius: 5px;
+}
+
+
+::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    box-shadow: inset 0 0 10px rgb(160 160 160 / 0.3);
 }
 
 .meme-img {
@@ -145,6 +167,7 @@ body {
     border-radius: 10px;
 
     transition: .2s;
+
 }
 
 .meme-img:hover {
@@ -154,6 +177,11 @@ body {
 
 
 .gallery-footer {
+    position: fixed;
+    bottom: 15vh;
+    right: 0;
+    width: 100%;
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -165,20 +193,28 @@ body {
 
 .profile-pic {
     border: 2px solid black;
-    width: 160px;
+    width: 120px;
     border-radius: 30%;
+
+
+    box-shadow: 1px 1px 5px black
 }
 
 .profile-text-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    max-width:50%;
+
+    max-width: 50%;
+    max-height: 15vh;
+
     margin-inline: 30px;
+
+    text-shadow: 1px 1px 2px black;
 }
 
 
-.profile-text-container h4 {
+.profile-text-container h5 {
     margin: 0;
 }
 
@@ -278,6 +314,7 @@ footer {
 
     background-color: var(--header-color);
     height: 15vh;
+
 }
 
 footer .logo {
